# datasets

./: .gitignore
BioRatna/: Carc_final_data.csv  Carcinogenicity- Feb 7-API-Copy1.ipynb  HERG_Concatenate.csv  Herg_combined-Sep 22--Feb 16.ipynb
dlfunc/: index.ipynb
langchainexp/: ChatbotObservability.ipynb  Flan5_LLM.ipynb  LangChain_x_flan_ul2.ipynb  Makefile  T5_Fine_tuning_Paraphrasing.ipynb  chatbot.py  index.ipynb  langchain_demo.ipynb  langchain_gpt4all.ipynb  llama_exp.ipynb  llama_langchain_customllm.ipynb  pyproject.toml  weather_agent.py  weather_tool.py
langchainexp/data/: Electric Vehicle Components Manufacturer and Supplier.txt  Embedded Software Design.txt  FPGA Engineering Service.txt  Hardware Engineering.txt  IoT hardware Solutions.txt  Motor Controller.txt  Power Electronics Design Services.txt  System Product Page.txt  Wireless Design Services.txt
lc_vertexai_exp/: Intro_vertexAI&LC_final.ipynb
