[tool.poetry]
name = "langchainexp"
version = "0.1.0"
description = ""
authors = ["Rajiv Mehta <rajiv.mehta@live.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.0"
huggingface-hub = "^0.12.1"
langchain = "^0.0.106"
unstructured = "^0.5.2"
chromadb = "^0.3.11"
gradio = "^3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
