[tool.poetry]
name = "langchainexp"
version = "0.1.0"
description = ""
authors = ["Rajiv Mehta <rajiv.mehta@live.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.0"
huggingface-hub = "^0.12.1"
langchain = "^0.0.107"
unstructured = "^0.5.2"
chromadb = "^0.3.11"
gradio = "^3.20.1"
cohere = "^3.10.0"
faiss-cpu = "^1.7.3"
tiktoken = "^0.3.0"
nomic = "^1.0.46"
datasets = "^2.10.1"
transformers = "^4.26.1"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
